apps/sm-18-apr-repo-test-03/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-18-apr-repo-test-03
  namespace: dev
  labels:
    app: sm-18-apr-repo-test-03
    backstage.io/kubernetes-id: sm-18-apr-repo-test-03
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-18-apr-repo-test-03
  template:
    metadata:
      labels:
        app: sm-18-apr-repo-test-03
        backstage.io/kubernetes-id: sm-18-apr-repo-test-03
        environment: dev
    spec:
      containers:
        - name: sm-18-apr-repo-test-03
          image: sureshmavp1/sm-18-apr-repo-test-03:1.0.1
          ports:
            - containerPort: 3000
