apps/sm-18-apr-repo-test-03/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm-18-apr-repo-test-03
  namespace: dev
  labels:
    backstage.io/kubernetes-id: sm-18-apr-repo-test-03
    environment: dev
spec:
  selector:
    app: sm-18-apr-repo-test-03
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: sm-18-apr-repo-test-03-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: sm-18-apr-repo-test-03.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: sm-18-apr-repo-test-03
#             port:
#               number: 80
