apps/sm-18-apr-repo-test-03/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm-18-apr-repo-test-03
  namespace: dev
  labels:
    backstage.io/kubernetes-id: sm-18-apr-repo-test-03
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /sm-18-apr-repo-test-03-dev(/|$)(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: sm-18-apr-repo-test-03
                port:
                  number: 80
